--- a/calculate.html
+++ b/calculate.html
@@ -41,10 +41,10 @@
                     <td><button>=</button></td>
                 </tr>
                 <tr>
-                    <!-- <td><button>(</button></td>
-                    <td><button>)</button></td> -->
+                    <td><button>(</button></td>
+                    <td><button>)</button></td>
                     <td><button>C</button></td>
-                    <!-- <td><button>%</button></td> -->
+                    <td><button>%</button></td>
                 </tr>
             
             </table>
